--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -196,7 +196,7 @@ Session status can be one of the following:
 For a comprehensive overview of a session's configuration and status, use the  `session.details() method`.
 
 ``` python
-from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
+from qiskit_ibm_runtime import QiskitRuntimeService, Session, EstimatorV2 as Estimator
 
 service = QiskitRuntimeService()
 backend = service.least_busy(operational=True, simulator=False)
