clarify where usage is seen

--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -32,7 +32,7 @@ The differences are summarized in the following table:
 <span id="usage"></span>
 ## Batch and session usage calculation
 
-The _usage_ is the time a QPU is locked for your workload. Failed or canceled jobs count toward your usage in certain circumstances - see the [Failed and canceled jobs](#failed-job) section for details.
+The _usage_ reported on the dashboard or by using the API is the time a QPU is locked for your workload. Failed or canceled jobs count toward your usage in certain circumstances - see the [Failed and canceled jobs](#failed-job) section for details.
 
 * Single job usage is the quantum time they use in processing.
 * Batch usage is the amount of time all jobs spend on the QPU.
