--- a/docs/api/qiskit/release-notes/0.19.mdx
+++ b/docs/api/qiskit/release-notes/0.19.mdx
@@ -161,7 +161,7 @@ VQE expectation computation with Aer qasm\_simulator now defaults to a computati
 
 *   [cvxpy](https://github.com/cvxgrp/cvxpy/) is now in the requirements list as a dependency for qiskit-aqua. It is used for the quadratic program solver which is used as part of the `qiskit.aqua.algorithms.QSVM`. Previously `cvxopt` was an optional dependency that needed to be installed to use this functionality. This is no longer required as cvxpy will be installed with qiskit-aqua.
 *   For state tomography run as part of `qiskit.aqua.algorithms.HHL` with a QASM backend the tomography fitter function `qiskit.ignis.verification.StateTomographyFitter.fit()` now gets called explicitly with the method set to `lstsq` to always use the least-squares fitting. Previously it would opportunistically try to use the `cvx` fitter if `cvxpy` were installed. But, the `cvx` fitter depends on a specifically configured `cvxpy` installation with an SDP solver installed as part of `cvxpy` which is not always present in an environment with `cvxpy` installed.
-*   The VQE expectation computation using qiskit-aer’s `qiskit.providers.aer.extensions.SnapshotExpectationValue` instruction is not enabled by default anymore. This was changed to be the default in 0.7.0 because it is significantly faster, but it led to unexpected ideal results without shot noise (see [#1013](https://github.com/Qiskit/qiskit-aqua/issues/1013) for more details). The default has now changed back to match user expectations. Using the faster expectation computation is now opt-in by setting the new `include_custom` kwarg to `True` on the `qiskit.aqua.algorithms.VQE` constructor.
+*   The VQE expectation computation using qiskit-aer’s `qiskit.providers.aer.extensions.SnapshotExpectationValue` instruction is not enabled by default anymore. This was changed to be the default in 0.7.0 because it is significantly faster, but it led to unexpected ideal results without shot noise (see [#1013](https://github.com/qiskit-community/qiskit-aqua/issues/1013) for more details). The default has now changed back to match user expectations. Using the faster expectation computation is now opt-in by setting the new `include_custom` kwarg to `True` on the `qiskit.aqua.algorithms.VQE` constructor.
 
 <span id="id462" />
 
@@ -482,11 +482,11 @@ The Qiskit Aqua 0.7.0 release introduces a lot of new functionality along with a
 
 ##### Optimization module
 
-The `` qiskit.optimization` `` module now offers functionality for modeling and solving quadratic programs. It provides various near-term quantum and conventional algorithms, such as the `MinimumEigenOptimizer` (covering e.g. `VQE` or `QAOA`) or `CplexOptimizer`, as well as a set of converters to translate between different problem representations, such as `QuadraticProgramToQubo`. See the [changelog](https://github.com/Qiskit/qiskit-aqua/#migration-guide) for a list of the added features.
+The `` qiskit.optimization` `` module now offers functionality for modeling and solving quadratic programs. It provides various near-term quantum and conventional algorithms, such as the `MinimumEigenOptimizer` (covering e.g. `VQE` or `QAOA`) or `CplexOptimizer`, as well as a set of converters to translate between different problem representations, such as `QuadraticProgramToQubo`. See the [changelog](https://github.com/qiskit-community/qiskit-aqua/#migration-guide) for a list of the added features.
 
 ##### Operator flow
 
-The operator logic provided in `` qiskit.aqua.operators` `` was completely refactored and is now a full set of tools for constructing physically-intuitive quantum computations. It contains state functions, operators and measurements and internally relies on Terra’s Operator objects. Computing expectation values and evolutions was heavily simplified and objects like the `ExpectationFactory` produce the suitable, most efficient expectation algorithm based on the Operator input type. See the [changelog](https://github.com/Qiskit/qiskit-aqua/#migration-guide) for a overview of the added functionality.
+The operator logic provided in `` qiskit.aqua.operators` `` was completely refactored and is now a full set of tools for constructing physically-intuitive quantum computations. It contains state functions, operators and measurements and internally relies on Terra’s Operator objects. Computing expectation values and evolutions was heavily simplified and objects like the `ExpectationFactory` produce the suitable, most efficient expectation algorithm based on the Operator input type. See the [changelog](https://github.com/qiskit-community/qiskit-aqua/#migration-guide) for a overview of the added functionality.
 
 ##### Native circuits
 
