--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -63,14 +63,20 @@ with Session(backend=backend):
 <span id="specify-length"></span>
 ## Session length
 
-You can define the maximum session timeout with the `max_time` parameter. This should exceed the longest job's execution time and be within the QPU's limits. This timer starts when the session starts.  When the value is reached, the session is closed.  Any jobs that are running will finish, but jobs still queued are failed.
+The maximum session time to live (TTL) determines how long a session can run.  You can set this value with the `max_time` parameter. This should exceed the longest job's execution time.
+
+This timer starts when the session starts.  When the value is reached, the session is closed.  Any jobs that are running will finish, but jobs still queued are failed.
 
 ``` python
 with Session(backend=backend, max_time="25m"):
   ...
 ```
 
-There is also an interactive time to live (ITTL) value that cannot be configured.  If no session jobs are queued within that window, the session is temporarily deactivated. To determine a session's ITTL, follow the instructions in [Determine session details](#session-details) and look for the `interactive_timeout` value.
+There is also an interactive time to live (ITTL) value that cannot be configured.  If no session jobs are queued within that window, the session is temporarily deactivated.
+
+To determine a session's max TTL or ITTL, follow the instructions in [Determine session details](#session-details) and look for the `max_time`or `interactive_timeout` value, respectively.
+
+For more information about these settings, see [Session maximum execution time.](/guides/max-execution-time#session-max-time)
 
 <span id="close"></span>
 ## Close a session
@@ -88,7 +94,9 @@ result = job1.result()
 result2 = job2.result()
 ```
 
+<Admonition type="tip">
 If you are not using a context manager, manually close the session to avoid unwanted cost. You can close a session as soon as you are done submitting jobs to it. When a session is closed with `session.close()`, it no longer accepts new jobs, but the already submitted jobs will still run until completion and their results can be retrieved.
+</Admonition>
 
 ``` python
 session = Session(backend=backend)
@@ -188,7 +196,7 @@ Session status can be one of the following:
 For a comprehensive overview of a session's configuration and status, use the  `session.details() method`.
 
 ``` python
-from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
+from qiskit_ibm_runtime import QiskitRuntimeService, Session, EstimatorV2 as Estimator
 
 service = QiskitRuntimeService()
 backend = service.least_busy(operational=True, simulator=False)
