Switch `CodeAssistantPrompt` format

--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -68,13 +68,14 @@
    "source": [
     "See [Standard gates](/api/qiskit/circuit_library#standard-gates) in the circuit library API documentation.\n",
     "\n",
-    "<CodeAssistantAdmonition>\n",
-    "  Not sure what your gate's called? Try asking Qiskit Code Assistant.\n",
-    "\n",
-    "  * `# Import a Hadamard gate from the circuit library`\n",
-    "  * `# Import a multi-controlled-X gate`\n",
-    "  * `# Add a controlled-phase gate to the circuit 'qc'`\n",
-    "</CodeAssistantAdmonition>"
+    "<CodeAssistantAdmonition\n",
+    "  tagLine=\"Not sure what your gate's called? Try asking Qiskit Code Assistant.\"\n",
+    "  prompts={[\n",
+    "    \"# Import a Hadamard gate from the circuit library\",\n",
+    "    \"# Import a multi-controlled-X gate\",\n",
+    "    \"# Add a controlled-phase gate to the circuit 'qc'\"\n",
+    "  ]}\n",
+    "/>"
    ]
   },
   {
