--- a/docs/guides/construct-circuits.ipynb
+++ b/docs/guides/construct-circuits.ipynb
@@ -465,11 +465,12 @@
    "id": "ae19e48d",
    "metadata": {},
    "source": [
-    "<CodeAssistantAdmonition>\n",
-    "  Forgotten the method name? Try asking Qiskit Code Assistant.\n",
-    "\n",
-    "  * `# Assign all parameters in qc to 0`\n",
-    "</CodeAssistantAdmonition>"
+    "<CodeAssistantAdmonition\n",
+    "  tagLine=\"Forgotten the method name? Try asking Qiskit Code Assistant.\"\n",
+    "  prompts={[\n",
+    "    \"# Assign all parameters in qc to 0\"\n",
+    "  ]}\n",
+    "/>"
    ]
   },
   {
