--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -115,11 +115,12 @@
    "id": "1f50a889-63b1-4458-a5e5-bd2ef47dd3eb",
    "metadata": {},
    "source": [
-    "<CodeAssistantAdmonition>\n",
-    "  Always forgetting how to retrieve a job? Try this prompt with Qiskit Code Assistant:\n",
-    "\n",
-    "  * `# Retrieve job JOB_ID from IBM Runtime and print the result`\n",
-    "</CodeAssistantAdmonition>"
+    "<CodeAssistantAdmonition\n",
+    "  tagLine=\"Always forgetting how to retrieve a job? Try this prompt with Qiskit Code Assistant:\"\n",
+    "  prompts={[\n",
+    "    \"# Retrieve job JOB_ID from IBM Runtime and print the result\"\n",
+    "  ]}\n",
+    "/>"
    ]
   },
   {
