--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -265,7 +265,7 @@
     "-- | -- | -- | -- \n",
     "`max_bond_dimension` | int | The maximum bond dimension to be used for the tensor networks. | 500 | \n",
     "`tem_compression_cutoff` | float | The cutoff value to be used for the tensor networks. | 1e-16\n",
-    "`max_execution_time` | int or `None` | The maximum execution time on the QPU in seconds. If the runtime exceeds this value, the job will be cancelled. If `None`, a default limit set by the Qiskit Runtime will apply. | `None`\n",
+    "`max_execution_time` | int or `None` | The maximum execution time on the QPU in seconds. If the runtime exceeds this value, the job will be canceled. If `None`, a default limit set by Qiskit Runtime will apply. | `None`\n",
     "`num_randomizations` | int | The number of randomizations to be used for gate twirling. | 32\n",
     "`mitigate_readout_error` | bool | A Boolean flag indicating whether to perform readout error mitigation or not. | True\n",
     "`num_readout_calibration_shots` | int | The number of shots to be used for readout error mitigation. | 10000\n",
