--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -27,12 +27,12 @@
     "expectation values of observables mitigating the inevitable noise-induced errors\n",
     "that occur on quantum hardware with increased accuracy and cost efficiency,\n",
     "making it a highly attractive option for quantum researchers and industry\n",
-    "practitioners alike. \n",
+    "practitioners alike.\n",
     "\n",
     "The method consists of constructing a tensor network representing the inverse of\n",
     "the global noise channel affecting the state of the quantum processor and then\n",
     "applying the map to informationally complete measurement outcomes acquired from\n",
-    "the noisy state to obtain unbiased estimators for the observables. \n",
+    "the noisy state to obtain unbiased estimators for the observables.\n",
     "\n",
     "As an advantage, TEM leverages informationally complete measurements to give\n",
     "access to a vast set of mitigated expectation values of observables and has\n",
@@ -44,7 +44,7 @@
     "quantum computations. Therefore, TEM has the potential to enable quantum\n",
     "advantage in complex scenarios, such as applications in the fields of quantum\n",
     "chaos, many-body physics, Hubbard dynamics, and small molecule chemistry\n",
-    "simulations. \n",
+    "simulations.\n",
     "\n",
     "The main features and benefits of TEM can be summarized as:\n",
     "\n",
@@ -99,7 +99,7 @@
     "capture subtle features, including qubit cross-talk. However, noise on the\n",
     "devices can fluctuate and drift and the learned noise might not be accurate at\n",
     "the point at which the estimation is done. This might result in inaccurate\n",
-    "results. "
+    "results."
    ]
   },
   {
@@ -137,8 +137,7 @@
     "## Example\n",
     "\n",
     "\n",
-    "The following snippet shows an example where TEM is used to compute the expectation values of an observable given a simple quantum circuit.\n",
-    "\n"
+    "The following snippet shows an example where TEM is used to compute the expectation values of an observable given a simple quantum circuit."
    ]
   },
   {
@@ -225,9 +224,7 @@
    "source": [
     "<Admonition type=\"info\">\n",
     "  The expected value for the noiseless circuit for the given operator should be around `0.18409094298943401`.\n",
-    "</Admonition>\n",
-    "\n",
-    "\n"
+    "</Admonition>"
    ]
   },
   {
@@ -256,20 +253,19 @@
    "id": "1ebd5f9b",
    "metadata": {},
    "source": [
-    "\n",
     "### Options\n",
     "\n",
     "A dictionary containing the advanced options for the TEM. The dictionary may contain the keys in the following table. If any of the options are not provided, the default value listed in the table will be used. The default values are good for typical use of TEM.\n",
     "\n",
     "Name | Choices | Description  | Default\n",
-    "-- | -- | -- | -- \n",
-    "`max_bond_dimension` | int | The maximum bond dimension to be used for the tensor networks. | 500 | \n",
+    "-- | -- | -- | --\n",
+    "`max_bond_dimension` | int | The maximum bond dimension to be used for the tensor networks. | 500 |\n",
     "`tem_compression_cutoff` | float | The cutoff value to be used for the tensor networks. | 1e-16\n",
     "`max_execution_time` | int or `None` | The maximum execution time on the QPU in seconds. If the runtime exceeds this value, the job will be canceled. If `None`, a default limit set by Qiskit Runtime will apply. | `None`\n",
     "`num_randomizations` | int | The number of randomizations to be used for gate twirling. | 32\n",
     "`mitigate_readout_error` | bool | A Boolean flag indicating whether to perform readout error mitigation or not. | True\n",
     "`num_readout_calibration_shots` | int | The number of shots to be used for readout error mitigation. | 10000\n",
-    "`default_precision` | float | The default precision to be used for the PUBs for which the precision is not specified. |0.02\n"
+    "`default_precision` | float | The default precision to be used for the PUBs for which the precision is not specified. |0.02"
    ]
   },
   {
@@ -280,7 +276,7 @@
     "## Outputs\n",
     "\n",
     "A Qiskit [PrimitiveResults](/api/qiskit/qiskit.primitives.PrimitiveResult) containing the TEM-mitigated result. The result for each PUB is returned as a [PubResult](/api/qiskit/qiskit.primitives.PubResult) containing the following fields:\n",
-    " \n",
+    "\n",
     "\n",
     "Name |Type | Description\n",
     "-- | -- | --\n",
