Add installation instructions

--- a/docs/guides/sqd-intro.mdx
+++ b/docs/guides/sqd-intro.mdx
@@ -13,6 +13,31 @@ The SQD tool can target Hamiltonians expressed as linear combinations of Pauli o
 
 ## Installation
 
+There are two ways to install the SQD package. Via PyPI and building from source. We also recommend installing these packages in a [virtual environment](https://docs.python.org/3.10/tutorial/venv.html) to ensure separation between package dependencies.
+
+### Install from PyPI
+
+The most straightforward way to install the `qiskit-addon-sqd` packge is via PyPI.
+
+```bash
+pip install qiskit-addon-sqd
+```
+
+### Build from source
+
+Users who wish to contribute to this package or who want to install it manually may do so by first cloing the repository
+
+```bash
+git clone git@github.com:Qiskit/qiskit-addon-sqd.git
+```
+
+and install the package via `pip`. The repository also contains example notebooks which can be run and if you plan on developing in the repository, you may want to also install the `dev` dependencies.
+
+Adjust the options to suit your needs.
+
+```bash
+pip install tox notebook -e '.[notebook-dependencies, dev]'
+```
 
 ## SQD Procedure
 
