--- a/docs/guides/post-process-results.mdx
+++ b/docs/guides/post-process-results.mdx
@@ -17,4 +17,4 @@ unphysical observables.
 ## Guides for post-processing results
 * [Retrieve and save results](./save-jobs)
 * [Visualize results](./visualize-results)
-* [Sample-based Quantum Diagonalization (SQD)](./sqd-intro)
+* [Sample-based quantum diagonalization (SQD)](./sqd-intro)
