reorganized inputs, added evs output in example

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -214,7 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = job.result()"
+    "result = job.result()\n",
+    "evs = result[0].data.evs"
    ]
   },
   {
@@ -238,8 +239,8 @@
     "Name | Type | Description | Required | Default | Example\n",
     "-- | -- | -- | -- | -- | --\n",
     "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/guides/primitive-input-output#overview-of-pubs) for more information. The circuits don't need to be ISA circuits. | Yes | N/A | (circuit, observables)\n",
-    "`instance` | str | The hub/group/project to use in that format. | Yes | N/A |\"hub1/group1/project1\"\n",
     "`backend_name` | str | Name of the backend to make the query.| No | If not provided, the least busy backend will be used. | \"ibm_fez\"\n",
+    "`instance` | str | The hub/group/project to use in that format. | Yes | N/A |\"hub1/group1/project1\"\n",
     "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
     "\n",
     "\n",
