--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "Fire Opal Performance Management makes it simple for anyone to achieve meaningful results from quantum computers at scale without needing to be quantum hardware experts. When running circuits with Fire Opal Performance Management, AI-driven error suppression techniques are automatically applied, enabling the scaling of larger problems with more gates and qubits. This approach reduces the number of shots required to reach the correct answer, with no added overhead—resulting in significant savings in both compute time and cost.\n",
+    "Fire Opal Performance Management makes it simple for anyone to achieve meaningful results from quantum computers at scale without needing to be quantum hardware experts. When running circuits with Fire Opal Performance Management, AI-driven error suppression techniques are automatically applied, enabling the scaling of larger problems with more gates and qubits. This approach reduces the number of shots required to reach the correct answer, with no added overhead — resulting in significant savings in both compute time and cost.\n",
     "\n",
     "Performance Management suppresses errors and increases the probability of getting the correct answer on noisy hardware. In other words, it increases the signal-to-noise ratio. The following image shows how increased accuracy enabled by Performance Management can reduce the need for additional shots in the case of a 10-qubit Quantum Fourier Transform algorithm. With only 30 shots, Q-CTRL reaches the 99% confidence threshold, whereas the default (`QiskitRuntime` Sampler, `optimization_level`=3 and `resilience_level`=1, `ibm_sherbrooke`) requires 170,000 shots. By getting the right answer faster, you save significant compute runtime.\n",
     "\n",
@@ -38,13 +38,13 @@
     "\n",
     "To reduce hardware noise, Fire Opal employs a range of AI-driven error suppression techniques depicted in the following image. With Fire Opal, the entire pipeline is completely automated with zero need for configuration.\n",
     "\n",
-    "Fire Opal's pipeline requires no compute time or physical overhead. In contrast to error mitigation, which requires overhead in the form of sampling, Fire Opal's error suppression works at both the gate and pulse levels to address various sources of noise and to prevent the likelihood of an error occurring. By preventing errors, the need for expensive post-processing is eliminated.\n",
+    "Fire Opal's pipeline eliminates the need for additional overhead, such as increased quantum runtime or extra physical qubits. Note that classical processing time remains a factor (refer to the Benchmarks section for estimates, where \"Total time\" reflects both classical and quantum processing). In contrast to error mitigation, which requires overhead in the form of sampling, Fire Opal's error suppression works at both the gate and pulse levels to address various sources of noise and to prevent the likelihood of an error occurring. By preventing errors, the need for expensive post-processing is eliminated.\n",
     "\n",
     "The following image depicts the error suppression methods automated by Fire Opal Performance Management.\n",
     "\n",
     "![Visualization of the error suppression pipeline](/images/guides/qctrl-performance-management/error_suppression.svg)\n",
     "\n",
-    "The function offers two primitives, Sampler and Estimator, and the inputs and outputs of both follow the implemented spec for [Qiskit Runtime V2 primitives](../migration-guides/v2-primitives). See the Inputs and Outputs sections for detailed interface information."
+    "The function offers two primitives, Sampler and Estimator, and the inputs and outputs of both follow the implemented spec for [Qiskit Runtime V2 primitives](../guides/primitive-input-output). See the Inputs and Outputs sections for detailed interface information."
    ]
   },
   {
@@ -128,7 +128,7 @@
    "source": [
     "### Estimator Example\n",
     "\n",
-    "Use the Sampler mode of Fire Opal Performance Management to run a Bernstein–Vazirani circuit. This algorithm, used to find a hidden string from the outputs of a black box function, is a common benchmarking algorithm because there is a single correct answer."
+    "Use Fire Opal Performance Management's Estimator primitive to determine the expectation value of a single circuit-observable pair."
    ]
   },
   {
@@ -136,7 +136,7 @@
    "id": "82932760",
    "metadata": {},
    "source": [
-    "In addition to the `qiskit-ibm-catalog` and `qiskit` package, you will also use the `NumPy` package to run this example. You can install this package by uncommenting the following cell if you are running this example in a notebook using the IPython kernel."
+    "In addition to the `qiskit-ibm-catalog` and `qiskit` packages, you will also use the `numpy` package to run this example. You can install this package by uncommenting the following cell if you are running this example in a notebook using the IPython kernel."
    ]
   },
   {
@@ -274,7 +274,7 @@
    "id": "7375fcad",
    "metadata": {},
    "source": [
-    "The results have the same format as an [Estimator result](https://docs.quantum.ibm.com/guides/primitive-input-output#estimator-output):"
+    "The results have the same format as an [Estimator result](/guides/primitive-input-output#estimator-output):"
    ]
   },
   {
@@ -320,17 +320,17 @@
     "\n",
     "| Name  | Type  | Description | Required | Default  | Example |\n",
     "|------|------|----------|----------|-----------|-----------|\n",
-    "| pubs       | `EstimatorPubLike` or `list[EstimatorPubLike]` | One or more tuples containing the inputs listed under `EstimatorPubLike` components   | Yes   | N/A   | `(circuit, observables, parameter_values)`   |\n",
+    "| pubs       | `QctrlEstimatorPubLike` or `list[QctrlEstimatorPubLike]` | One or more tuples containing the inputs listed under `EstimatorPubLike` components   | Yes   | N/A   | `(circuit, observables, parameter_values)`   |\n",
     "| instance   | `str`   | The hub/group/project to use in that format  | No  | A Premium access instance is randomly chosen if your account has access to multiple instances | `\"hub1/group1/project1\"`     |\n",
     "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
     "\n",
-    "**`EstimatorPubLike` components:**\n",
+    "**`QctrlEstimatorPubLike` components (derived from the [Qiskit Runtime PUB definition]((/guides/primitive-input-output#estimator-pub))):**\n",
     "- A single circuit defined as a `QuantumCircuit` or in OpenQASM 2.0 or 3.0 string format.\n",
     "- One or more observables that specify the expectation values to estimate, in any of the formats denoted in the list \"Supported observables formats\".\n",
     "- (Optional) A collection of parameter values to bind the circuit against, which follow the same [array broadcasting rules](./primitive-input-output#broadcasting-rules) as the `QiskitRuntime` primitives.\n",
     "- (Optional) A target precision for expectation values to estimate.\n",
-    "- (Optional) A dictionary of run options, such as the default shot count.\n",
+    "- (Optional) A real number representing the precision, or a dictionary of run options, such as the shot count.\n",
     "\n",
     "**Supported observables formats:**\n",
     "- Any one of the `ObservablesArrayLike` formats, such as `Pauli`, `SparsePauliOp`, `PauliList`, or `str`\n",
@@ -366,7 +366,7 @@
     "### Estimator outputs\n",
     "| Name   | Type   | Description  | Example |\n",
     "|--------|---------------------------------|------------------------------------|---------------------|\n",
-    "| values | `PrimitiveResult`  | The [`PrimitiveResult`](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.PrimitiveResult) corresponding to the list of input PUBs | `PubResult(data=DataBin(evs=[0.1234], stds=[0.1]))` |"
+    "| N/A | `PrimitiveResult`  | The [`PrimitiveResult`](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.PrimitiveResult) corresponding to the list of input PUBs | `PubResult(data=DataBin(evs=[0.1234], stds=[0.1]))` |"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "source": [
     "### Sampler Example\n",
     "\n",
-    "Use the Sampler mode of Fire Opal Performance Management to run a Bernstein–Vazirani circuit. This algorithm, used to find a hidden string from the outputs of a black box function, is a common benchmarking algorithm because there is a single correct answer."
+    "Use Fire Opal Performance Management's Sampler primitive to run a Bernstein–Vazirani circuit. This algorithm, used to find a hidden string from the outputs of a black box function, is a common benchmarking algorithm because there is a single correct answer."
    ]
   },
   {
@@ -525,15 +525,15 @@
     "\n",
     "| Name       | Type            | Description | Required | Default | Example |\n",
     "|------------|---------------|------------------|----------|----------|--------------------|\n",
-    "| pubs       | `SamplerPubLike` or `list[SamplerPubLike]`   | One or more tuples containing the inputs listed under `SamplerPubLike` components     | Yes      | N/A | `(circuit, parameter_values)`            |\n",
+    "| pubs       | `QctrlSamplerPubLike` or `list[QctrlSamplerPubLike]`   | One or more tuples containing the inputs listed under `SamplerPubLike` components     | Yes      | N/A | `(circuit, parameter_values)`            |\n",
     "| instance   | `str`     | The hub/group/project to use in that format        | No | A Premium access instance is randomly chosen if your account has access to multiple instances     | `\"hub1/group1/project1\"`   |\n",
     "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
     "\n",
-    "**`SamplerPubLike` components:**\n",
+    "**`QctrlSamplerPubLike` components (derived from the [Qiskit Runtime PUB definition]((/guides/primitive-input-output#sampler-pub))):**\n",
     "- A single circuit defined as a `QuantumCircuit` or in OpenQASM 2.0 or 3.0 string format.\n",
     "- (Optional) A collection of parameter values to bind the circuit against.\n",
-    "- (Optional) A dictionary of runtime options, such as the shot count.\n",
+    "- (Optional) An integer representing the shot count, or a dictionary of runtime options, such as the shot count\n",
     "\n",
     "**Supported backends:**\n",
     "The following list of backends are currently supported. If your device is not listed, [reach out to Q-CTRL](https://form.typeform.com/to/iuujEAEI?typeform-source=q-ctrl.com) to add support.\n",
@@ -559,7 +559,7 @@
     "### Sampler outputs\n",
     "| Name   | Type                                   | Description                                                                               | Example                         |\n",
     "|--------|----------------------------------------|-------------------------------------------------------------------------------------------|---------------------------------|\n",
-    "| result | `list[ArrayLike[dict[str, int]]]`      | The resultant list of counts dictionaries corresponding to the list of input PUBs     | `[{'000001': 100, '000011': 2}]` |\n"
+    "| N/A | `PrimitiveResult`  | The [`PrimitiveResult`](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.PrimitiveResult) corresponding to the list of input PUBs | `FIX THIS - - - - - -- - -` |\n"
    ]
   },
   {
