--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -45,13 +45,13 @@
    "source": [
     "## Inputs and outputs\n",
     "### Inputs\n",
-    "| Name    | Type | Description | Required | Example |\n",
-    "| ---------  | ---------------- | -------------------------- | -------- | ---------- |\n",
-    "| problem  | `str`              | One of the representations listed under \"Accepted problem formats\". | Yes   |`Poly(2.0*n[0]*n[1] + 2.0*n[0]*n[2] - 3.13520241298341*n[0] + 2.0*n[1]*n[2] - 3.14469748506794*n[1] - 3.18897660121566*n[2] + 6.0, n[0], n[1], n[2], domain='RR')` |\n",
-    "| problem_type  | `str`              | Name of the problem class. This is only used for graph problem definitions to determine the objective. Currently limited to “maxcut”.       | No      | `\"maxcut\"`      |\n",
-    "| backend_name  | `str`              | Name of the backend to use      | No      | `\"hub1/group1/project1\"`      |\n",
-    "| instance  | `str`              | The hub/group/project to use.     | No      | `\"hub1/group1/project1\"`      |\n",
-    "| options  | `dict`              | Input options, including the following: (Optional) `session_id`: str. Default behavior creates a new Sessions. | No     | `{\"session_id\": \"cw2q70c79ws0008z6g4g\"}`     |\n",
+    "| Name    | Type | Description | Required | Default | Example |\n",
+    "| ---------  | ---------------- | -------------------------- | -------- | ---------- | ---------- |\n",
+    "| problem  | `str`              | One of the representations listed under \"Accepted problem formats\" | Yes | N/A   |`Poly(2.0*n[0]*n[1] + 2.0*n[0]*n[2] - 3.13520241298341*n[0] + 2.0*n[1]*n[2] - 3.14469748506794*n[1] - 3.18897660121566*n[2] + 6.0, n[0], n[1], n[2], domain='RR')` |\n",
+    "| problem_type  | `str`              | Name of the problem class; only used for graph problem definitions, which are limited to \"maxcut\"; not required for arbitrary objective function problem definitions   | No      | `None`| `\"maxcut\"`      |\n",
+    "| backend_name  | `str`              | Name of the backend to use      | No  | Least busy backend that your instance has access to    | `\"hub1/group1/project1\"`      |\n",
+    "| instance  | `str`              | The hub/group/project to use    | No   | A Premium access instance is randomly chosen if your account has access to multiple instances   | `\"hub1/group1/project1\"`      |\n",
+    "| options  | `dict`              | Input options, including the following: (Optional) `session_id`: `str`; default behavior creates a new Session | No | `None`    | `{\"session_id\": \"cw2q70c79ws0008z6g4g\"}`     |\n",
     "\n",
     "**Accepted problem formats:**\n",
     "- Polynomial expression representation of an objective function. Ideally created in Python with an existing SymPy Poly object and formatted into a string using [sympy.srepr](https://docs.sympy.org/latest/tutorials/intro-tutorial/printing.html#srepr).\n",
@@ -157,7 +157,7 @@
    "id": "a699235b",
    "metadata": {},
    "source": [
-    "In addition to the `qiskit-serverless` package, you will also use the following packages to run this example: `NetworkX` and `NumPy`. You can install these packages by uncommenting the following cell if you are running this example in a notebook using the IPython kernel."
+    "In addition to `qiskit-ibm-catalog`, you will also use the following packages to run this example: `networkx` and `numpy`. You can install these packages by uncommenting the following cell if you are running this example in a notebook using the IPython kernel."
    ]
   },
   {
@@ -260,10 +260,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03998691",
+   "id": "48069093",
    "metadata": {},
    "source": [
-    "You can use the familiar [Qiskit Serverless APIs](https://docs.quantum.ibm.com/guides/qiskit-serverless) to check your Qiskit Function workload's status:"
+    "Check your Qiskit Function workload's [status](https://docs.quantum.ibm.com/guides/functions#check-job-status) or return [results](https://docs.quantum.ibm.com/guides/functions#retrieve-results) as follows:"
    ]
   },
   {
@@ -282,7 +282,7 @@
    "id": "74f48eab",
    "metadata": {},
    "source": [
-    "### 3. Get the result\n",
+    "### 3. Retrieve the result\n",
     "Retrieve the optimal cut value from the results dictionary.\n",
     "\n",
     "<Admonition type=\"note\">The mapping of the variables to the bitstring may have changed. The output dictionary contains a `variables_to_bitstring_index_map` sub-dictionary, which helps to verify the ordering.</Admonition>"
@@ -337,7 +337,7 @@
    "id": "a9fbc0e9",
    "metadata": {},
    "source": [
-    "In addition to the `qiskit-ibm-catalog` and `qiskit` packages, you will also use the following packages to run this example: `NumPy`, `NetworkX`, and `SymPy`. You can install these packages by uncommenting the following cell if you are running this example in a notebook using the IPython kernel."
+    "In addition to the `qiskit-ibm-catalog` and `qiskit` packages, you will also use the following packages to run this example: `numpy`, `networkx`, and `sympy`. You can install these packages by uncommenting the following cell if you are running this example in a notebook using the IPython kernel."
    ]
   },
   {
