Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -118,7 +118,7 @@
    "id": "2947b5c3",
    "metadata": {},
    "source": [
-    "## Estimator Primitive"
+    "## Estimator primitive"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "id": "df2788d5",
    "metadata": {},
    "source": [
-    "### Estimator Example\n",
+    "### Estimator example\n",
     "\n",
     "Use Fire Opal Performance Management's Estimator primitive to determine the expectation value of a single circuit-observable pair."
    ]
@@ -374,7 +374,7 @@
    "id": "a78ce8bd",
    "metadata": {},
    "source": [
-    "## Sampler Primitive"
+    "## Sampler primitive"
    ]
   },
   {
@@ -382,7 +382,7 @@
    "id": "b1300f06",
    "metadata": {},
    "source": [
-    "### Sampler Example\n",
+    "### Sampler example\n",
     "\n",
     "Use Fire Opal Performance Management's Sampler primitive to run a Bernstein–Vazirani circuit. This algorithm, used to find a hidden string from the outputs of a black box function, is a common benchmarking algorithm because there is a single correct answer."
    ]
@@ -459,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check your Qiskit Function workload's [status](https://docs.quantum.ibm.com/guides/functions#check-job-status) or return [results](https://docs.quantum.ibm.com/guides/functions#retrieve-results) as follows:"
+    "Check your Qiskit Function workload's [status](/guides/functions#check-job-status) or return [results](/guides/functions#retrieve-results) as follows:"
    ]
   },
   {
