update links in check status

--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -263,7 +263,7 @@
    "id": "48069093",
    "metadata": {},
    "source": [
-    "Check your Qiskit Function workload's [status](https://docs.quantum.ibm.com/guides/functions#check-job-status) or return [results](https://docs.quantum.ibm.com/guides/functions#retrieve-results) as follows:"
+    "Check your Qiskit Function workload's [status](/guides/functions#check-job-status) or return [results](/guides/functions#retrieve-results) as follows:"
    ]
   },
   {
@@ -479,7 +479,7 @@
    "id": "d154c226",
    "metadata": {},
    "source": [
-    "You can check your Qiskit Function workload's status as follows:"
+    "Check your Qiskit Function workload's [status](/guides/functions#check-job-status) or return [results](/guides/functions#retrieve-results) as follows:"
    ]
   },
   {
